--- a/notebook/lesson4.ipynb
+++ b/notebook/lesson4.ipynb
@@ -2,13 +2,81 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "javascript"
+    },
+    "polyglot_notebook": {
+     "kernelName": "javascript"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9007199254740992"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2.302585092994046"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3.141592653589793"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.6931471805599453"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "let greeting = 'Molly';\n",
-    "let age = 27;\n",
-    "console.log(\"我的姓名是:\"+ name + \"我的age是:\" + age)"
+    "console.log(Math.pow(2,53))\n",
+    "console.log(Math.round(.6))\n",
+    "console.log(Math.log(10))\n",
+    "console.log(Math.pow(Math.E,2.302585092994046))\n",
+    "console.log(Math.PI)\n",
+    "console.log(Math.LN2)"
    ]
   }
  ],
