--- a/notebook/lesson7.ipynb
+++ b/notebook/lesson7.ipynb
@@ -34,6 +34,77 @@
     "\n",
     "console.log(add(5,6))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "javascript"
+    },
+    "polyglot_notebook": {
+     "kernelName": "javascript"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "//使用運算式定義funtion\n",
+    "\n",
+    "const add  = function(a,b){\n",
+    "    return a+b\n",
+    "}\n",
+    "\n",
+    "console.log(add(5,6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "javascript"
+    },
+    "polyglot_notebook": {
+     "kernelName": "javascript"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "//ES6\n",
+    "//FUNCTIONS\n",
+    "\n",
+    "const add = (a,b) => {\n",
+    "    return a+b\n",
+    "}\n",
+    "\n",
+    "console.log(add(5,6))"
+   ]
   }
  ],
  "metadata": {
