--- a/test.ipynb
+++ b/test.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "javascript"
@@ -72,7 +72,7 @@
     {
      "data": {
       "text/plain": [
-       "false"
+       "true"
       ]
      },
      "metadata": {},
@@ -81,8 +81,64 @@
    ],
    "source": [
     "const codePatternReg = /\\w\\w\\w-\\w\\w\\w-\\w\\w\\w/g\n",
-    "console.log(codePatternReg.test(\"33-333-333\"))\n",
+    "console.log(codePatternReg.test(\"333-333-333\"))\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "javascript"
+    },
+    "polyglot_notebook": {
+     "kernelName": "javascript"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2023-05-29"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "let current = new Date()\n",
+    "let year = current.getFullYear()\n",
+    "let month = current.getMonth()+1\n",
+    "let date = current.getDate()\n",
+    "\n",
+    "let month_string = String(month).padStart(2,\"0\")\n",
+    "let date_string = String(date).padStart(2,\"0\")\n",
+    "let current_date_sting = `${year}-${month_string}-${date_string}`\n",
+    "console.log(current_date_sting)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "javascript"
+    },
+    "polyglot_notebook": {
+     "kernelName": "javascript"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "S"
    ]
   }
  ],
